// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/new_channel_modal should match snapshot 1`] = `
<MenuWrapper
  animationComponent={[Function]}
  className="AddChannelsCtaDropdown"
  onToggle={[Function]}
  open={false}
>
  <button
    aria-label="Add Channel Dropdown"
    className="SidebarChannelNavigator__addChannelsCtaLhsButton SidebarChannelNavigator__addChannelsCtaLhsButton--untouched"
    id="addChannelsCta"
    onClick={[Function]}
  >
    <li
      aria-label="Add channels"
    >
      <i
        className="icon-plus-box"
      />
      <span>
        Add Channels
      </span>
    </li>
  </button>
  <Menu
    ariaLabel="Add Channels Dropdown"
    id="AddChannelCtaDropdown"
  >
    <MenuGroup>
      <MenuItemAction
        id="showNewChannel"
        onClick={[Function]}
        show={true}
        text="Create new channel"
      />
      <MenuItemAction
        id="showMoreChannels"
        onClick={[Function]}
        show={true}
        text="Browse channels"
      />
    </MenuGroup>
  </Menu>
</MenuWrapper>
`;

exports[`components/new_channel_modal should match snapshot when user has only join channel permissions 1`] = `
<button
  aria-label="Add Channel Dropdown"
  className="SidebarChannelNavigator__addChannelsCtaLhsButton SidebarChannelNavigator__addChannelsCtaLhsButton--untouched"
  id="addChannelsCta"
  onClick={[Function]}
>
  <li
    aria-label="Add channels"
  >
    <i
      className="icon-plus-box"
    />
    <span>
      Add Channels
    </span>
  </li>
</button>
`;
